feat: replies complete all
