# src/v1/DTO/login-dto.ts
@@ -1,4 +1,4 @@
-import { User } from "@prisma/client"
+import { User } from "@prisma/client";
 
 export interface loginDTO {
     email: string,
@@ -7,6 +7,23 @@ export interface loginDTO {
 
 
 export interface UserLogin {
+    profile: {
+        id: string;
+        fullName: string;
+        username: string;
+        image: string | null;
+    };
+    id: string;
+    email: string;
+    socialConnectiion: boolean;
+    createdAt: Date;
+    updateAt: Date;
+    threadId: string | null;
+}
+
+
+export interface UserToken {
     user: Omit<User, "password">
     token: string
 }
+
